--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@
 /CrispinEngine/CrispinEngine.sln
 /CrispinEngine/CrispinEngine.VC.db
 /CrispinEngine/CrispinEngine.VC.VC.opendb
+/CrispinEngine/CrispinEngine/x64/Debug/CrispinEngine.tlog
+/CrispinEngine/CrispinEngine/x64/Debug
+/CrispinEngine/deps/include/SDL2
+/CrispinEngine/x64/Debug
+/CrispinEngine/CrispinEngine/CrispinEngine.vcxproj.user
