Added CrispinEngine 1.0 Source

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /CrispinEngine/deps/include/SDL2
 /CrispinEngine/x64/Debug
 /CrispinEngine/CrispinEngine/CrispinEngine.vcxproj.user
+/CrispinEngine/deps/include
