Added game template

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,21 @@
 /CrispinEngine/x64/Debug
 /CrispinEngine/CrispinEngine/CrispinEngine.vcxproj.user
 /CrispinEngine/deps/include
+/CrispinEngine/CrispinEngine/Release
+/GameTemplate/.vs/GameTemplate/v14
+/GameTemplate/Debug
+/GameTemplate/deps/include/GL
+/GameTemplate/deps/include/glm
+/GameTemplate/deps/include/SDL2
+/GameTemplate/GameTemplate/Audio/Music
+/GameTemplate/GameTemplate/Audio/SFX
+/GameTemplate/GameTemplate/Debug/GameTemplate.tlog
+/GameTemplate/GameTemplate/Debug
+/GameTemplate/GameTemplate/Release/GameTemplate.tlog
+/GameTemplate/GameTemplate/Release
+/GameTemplate/GameTemplate/GameTemplate.vcxproj.user
+/GameTemplate/GameTemplate/GameTemplate.vcxproj.filters
+/GameTemplate/GameTemplate/GameTemplate.vcxproj
+/GameTemplate/GameTemplate.VC.VC.opendb
+/GameTemplate/GameTemplate.VC.db
+/GameTemplate/GameTemplate.sln
